Gateway upd (#41)
* mega upd
