# gateway/docs/swagger.yaml
@@ -4,6 +4,10 @@ definitions:
     properties:
       class:
         type: string
+      keywords:
+        items:
+          type: string
+        type: array
       labels:
         items:
           type: string
@@ -50,6 +54,8 @@ paths:
             $ref: '#/definitions/domain.TextEntities'
         "204":
           description: No Content
+          schema:
+            $ref: '#/definitions/responses.HTTPError'
         "500":
           description: Internal Server Error
           schema:
